# robotframework-gpio

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: python-build.yml  python-publish.yml
atests/: board.robot  e2e.robot  gpio.robot
docs/: GPIOLibrary.html  index.html
examples/: led_tests.robot  remote_led_tests.robot
src/GPIOLibrary/: __init__.py
src/GPIOLibrary/keywords/: BoardKeywords.py  GPIOKeywords.py  __init__.py
src/GPIOLibrary/mocks/RPi/: GPIO.py  __init__.py
utests/: conftest.py  test_package.py
